@@ -5,6 +5,8 @@ CoLo 1.21 (xxxx-xx-xx)
 
 *	Merged "screen" and "minicom" keymaps.
 
+*	Added delete word to line editor ('ctrl-w').
+
 CoLo 1.20 (2006-01-16)
 ----------------------
 
